samples/_failures_safe/1761634251_3a9331_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3d33e5d.c: In function ‘main’:
./samples/SAFE/__tmp_b3d33e5d.c:134:12: error: missing terminating " character
  134 |     printf("=========================\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b3d33e5d.c:134:5: error: expected expression at end of input
  134 |     printf("=========================\n
      |     ^~~~~~
./samples/SAFE/__tmp_b3d33e5d.c:134:5: error: expected declaration or statement at end of input
